--- a/trunk/.tx/config
+++ b/trunk/.tx/config
@@ -4,5 +4,5 @@ host=https://www.transifex.com
 file_filter=MP-TVSeries\Resources\Languages\<lang>.xml
 source_file=MP-TVSeries\Resources\Languages\en-US.xml
 source_lang=en
-lang_map = en: en-US
+lang_map = en: en-US, pt_BR: pt-BR
 type=ANDROID
