--- a/trunk/MP-TVSeries/MP-TVSeries.csproj
+++ b/trunk/MP-TVSeries/MP-TVSeries.csproj
@@ -435,6 +435,9 @@
     <None Include="Resources\Images\arrow_up_small.png" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Resources\Languages\tr.xml" />
+    <Content Include="Resources\Languages\uk.xml" />
+    <Content Include="Resources\Languages\zh.xml" />
     <None Include="Resources\Images\busy.gif" />
     <None Include="Resources\Images\big_spinner.gif" />
     <None Include="Resources\Images\find.png" />
@@ -448,25 +451,35 @@
     <None Include="Resources\Images\tick.png" />
     <None Include="Resources\Images\trakt.png" />
     <Content Include="Resources\Images\icon.ico" />
+    <Content Include="Resources\Languages\ca.xml" />
     <Content Include="Resources\Languages\cs.xml" />
     <Content Include="Resources\Languages\da.xml" />
     <Content Include="Resources\Languages\de.xml" />
     <Content Include="Resources\Languages\el.xml" />
     <Content Include="Resources\Languages\en-US.xml" />
     <Content Include="Resources\Languages\es.xml" />
+    <Content Include="Resources\Languages\et.xml" />
     <Content Include="Resources\Languages\fi.xml" />
     <Content Include="Resources\Languages\fr.xml" />
     <Content Include="Resources\Languages\he.xml" />
+    <Content Include="Resources\Languages\hi.xml" />
+    <Content Include="Resources\Languages\hr.xml" />
+    <Content Include="Resources\Languages\hu.xml" />
+    <Content Include="Resources\Languages\id.xml" />
+    <Content Include="Resources\Languages\is.xml" />
     <Content Include="Resources\Languages\it.xml" />
     <Content Include="Resources\Languages\ko.xml" />
+    <Content Include="Resources\Languages\lt.xml" />
+    <Content Include="Resources\Languages\nb.xml" />
     <Content Include="Resources\Languages\nl.xml" />
-    <Content Include="Resources\Languages\no-NB.xml" />
     <Content Include="Resources\Languages\no.xml" />
     <Content Include="Resources\Languages\pl.xml" />
     <Content Include="Resources\Languages\pt-BR.xml" />
     <Content Include="Resources\Languages\pt.xml" />
     <Content Include="Resources\Languages\ru.xml" />
-    <Content Include="Resources\Languages\ru_iso1251.xml" />
+    <Content Include="Resources\Languages\sk.xml" />
+    <Content Include="Resources\Languages\sl.xml" />
+    <Content Include="Resources\Languages\sr.xml" />
     <Content Include="Resources\Languages\sv.xml" />
     <None Include="Resources\Images\tv_series_logo_noreflection.png" />
     <Compile Include="Configuration\ImportPanelEpID.cs">
