--- a/trunk/MP-TVSeries/MP-TVSeries.csproj
+++ b/trunk/MP-TVSeries/MP-TVSeries.csproj
@@ -51,7 +51,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DocumentationFile>
     </DocumentationFile>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
@@ -124,6 +124,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="cache.cs" />
+    <Compile Include="ConfigConnector.cs" />
     <Compile Include="Configuration\ArtworkDownloadLimits.cs">
       <SubType>Form</SubType>
     </Compile>
