--- a/MP-TVSeries/MP-TVSeries.csproj
+++ b/MP-TVSeries/MP-TVSeries.csproj
@@ -122,6 +122,9 @@
     <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="Trailers">
+      <HintPath>..\External\Trailers.dll</HintPath>
+    </Reference>
     <Reference Include="TraktPlugin">
       <HintPath>..\External\TraktPlugin.dll</HintPath>
     </Reference>
