--- a/MP-TVSeries/MP-TVSeries.csproj
+++ b/MP-TVSeries/MP-TVSeries.csproj
@@ -79,10 +79,6 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\External\Common.Utils.dll</HintPath>
     </Reference>
-    <Reference Include="CookComputing.XmlRpcV2, Version=2.4.0.0, Culture=neutral, PublicKeyToken=a7d6e17aa302004d, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\External\FollwitApi\External\CookComputing.XmlRpcV2.dll</HintPath>
-    </Reference>
     <Reference Include="Core, Version=1.1.0.16045, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\External\Core.dll</HintPath>
@@ -94,11 +90,6 @@
     <Reference Include="Dialogs, Version=1.1.0.16051, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\External\Dialogs.dll</HintPath>
-    </Reference>
-    <Reference Include="FollwitApi, Version=1.0.2.1590, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\External\FollwitApi.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="GUIVideos">
       <HintPath>..\External\GUIVideos.dll</HintPath>
@@ -178,13 +169,6 @@
     <Compile Include="GUI\GUIActors.cs" />
     <Compile Include="GUI\GUIConnector.cs" />
     <Compile Include="Online Parsing Classes\GetActors.cs" />
-    <Compile Include="FollwitTv\FollwitConnector.cs" />
-    <Compile Include="FollwitTv\FollwitSettingsPanel.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="FollwitTv\FollwitSettingsPanel.Designer.cs">
-      <DependentUpon>FollwitSettingsPanel.cs</DependentUpon>
-    </Compile>
     <Compile Include="SkinSettings.cs" />
     <Compile Include="Configuration\About.cs">
       <SubType>UserControl</SubType>
@@ -422,9 +406,6 @@
       <DependentUpon>PlaylistSettings.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="FollwitTv\FollwitSettingsPanel.resx">
-      <DependentUpon>FollwitSettingsPanel.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Online Parsing Classes\APIKey.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>APIKey.Designer.cs</LastGenOutput>
@@ -572,11 +553,7 @@
   <Target Name="AfterBuild">
   </Target>-->
   <PropertyGroup>
-    <PostBuildEvent>cd $(TargetDir)
-copy "$(ProjectDir)..\External\merge.bat" "$(TargetDir)" /Y
-copy "$(ProjectDir)..\External\ilmerge.exe" "$(TargetDir)" /Y
-call merge.bat
-if exist $(ProjectDir)PostBuild.bat call $(ProjectDir)PostBuild.bat $(ProjectDir) $(ConfigurationName)</PostBuildEvent>
+    <PostBuildEvent>if exist $(ProjectDir)PostBuild.bat call $(ProjectDir)PostBuild.bat $(ProjectDir) $(ConfigurationName)</PostBuildEvent>
     <PreBuildEvent>subwcrev "$(SolutionDir)." "$(ProjectDir)Properties\VersionInfo.cs.tmpl" "$(ProjectDir)Properties\VersionInfo.cs"</PreBuildEvent>
   </PropertyGroup>
 </Project>
