Updated trakt handling now that the trakt plugin has split out the API into a separate library. Required changes for the community ratings to be retrieved.

--- a/MP-TVSeries/MP-TVSeries.csproj
+++ b/MP-TVSeries/MP-TVSeries.csproj
@@ -116,6 +116,9 @@
     <Reference Include="Trailers">
       <HintPath>..\External\Trailers.dll</HintPath>
     </Reference>
+    <Reference Include="TraktAPI">
+      <HintPath>..\External\TraktAPI.dll</HintPath>
+    </Reference>
     <Reference Include="TraktPlugin">
       <HintPath>..\External\TraktPlugin.dll</HintPath>
     </Reference>
