--- a/MP-TVSeries/MP-TVSeries.csproj
+++ b/MP-TVSeries/MP-TVSeries.csproj
@@ -91,6 +91,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\External\Dialogs.dll</HintPath>
     </Reference>
+    <Reference Include="Gentle.Framework">
+      <HintPath>..\External\Gentle.Framework.dll</HintPath>
+    </Reference>
     <Reference Include="GUIVideos">
       <HintPath>..\External\GUIVideos.dll</HintPath>
     </Reference>
@@ -121,6 +124,12 @@
     </Reference>
     <Reference Include="TraktPlugin">
       <HintPath>..\External\TraktPlugin.dll</HintPath>
+    </Reference>
+    <Reference Include="TvBusinessLayer">
+      <HintPath>..\External\TvBusinessLayer.dll</HintPath>
+    </Reference>
+    <Reference Include="TVDatabase">
+      <HintPath>..\External\TVDatabase.dll</HintPath>
     </Reference>
     <Reference Include="Utils, Version=2.2.7.16040, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
