Added support for fanart.tv to the Artwork Chooser.

--- a/MP-TVSeries/MP-TVSeries.csproj
+++ b/MP-TVSeries/MP-TVSeries.csproj
@@ -181,6 +181,11 @@
     <Compile Include="DB Classes\DBActor.cs" />
     <Compile Include="Extensions\JsonExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="FanartTVAPI\DataStructures\FanartTvImage.cs" />
+    <Compile Include="FanartTVAPI\DataStructures\FanartTvImages.cs" />
+    <Compile Include="FanartTVAPI\DataStructures\FanartTvSeasonImage.cs" />
+    <Compile Include="FanartTVAPI\Extensions\JsonExtensions.cs" />
+    <Compile Include="FanartTVAPI\FanartTvAPI.cs" />
     <Compile Include="GUI\GUIActors.cs" />
     <Compile Include="GUI\GUIArtworkChooser.cs" />
     <Compile Include="GUI\GUIConnector.cs" />
