Updated German translations, thanks catavolt

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@
 /ConfigLauncher/bin/Debug/Dialogs.dll
 /ConfigLauncher/bin/Debug/GUIVideos.dll
 /ConfigLauncher/bin/Debug/Utils.dll
+/ConfigLauncher/obj/Release/*.CopyComplete
