Updated solution to VS2019.

--- a/MP-TVSeries/MP-TVSeries.csproj
+++ b/MP-TVSeries/MP-TVSeries.csproj
@@ -450,6 +450,9 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\.editorconfig">
+      <Link>.editorconfig</Link>
+    </None>
     <None Include="Resources\Images\arrow_up.png" />
     <None Include="Resources\Images\arrow_down.png" />
   </ItemGroup>
