--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@
 /ConfigLauncher/bin/Debug/GUIVideos.dll
 /ConfigLauncher/bin/Debug/Utils.dll
 /ConfigLauncher/obj/Release/*.CopyComplete
+/ConfigLauncher/obj/Debug/*.CopyComplete
