--- a/MP-TVSeries/MP-TVSeries.csproj
+++ b/MP-TVSeries/MP-TVSeries.csproj
@@ -164,6 +164,12 @@
       <DependentUpon>ProgressDialog.cs</DependentUpon>
     </Compile>
     <Compile Include="Configuration\UIExtensions.cs" />
+    <Compile Include="Configuration\UpgradeDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Configuration\UpgradeDialog.Designer.cs">
+      <DependentUpon>UpgradeDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Configuration\ViewTemplates.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -442,6 +448,9 @@
     <EmbeddedResource Include="Configuration\AddImportPathPopup.resx">
       <DependentUpon>AddImportPathPopup.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Configuration\UpgradeDialog.resx">
+      <DependentUpon>UpgradeDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Configuration\ViewsConfiguration.resx">
       <DependentUpon>ViewsConfiguration.cs</DependentUpon>
